# AcadBot

./: client_id.json  main.py  pyproject.toml
